added homepage comment subscriber

--- a/scss/global/_colors.scss
+++ b/scss/global/_colors.scss
@@ -16,6 +16,7 @@ $success: hsl(119, 39%, 62%); //#78C377
 $textPrimary: hsl(210, 21%, 33%); //#425466
 $textPlaceholder: hsl(240, 6%, 73%); //B5B5BD
 $usercolor: hsl(240, 1%, 30%); //#4B4B4C
+$textdark :hsl(240, 8%, 17%) ;//#27272E
 
 $headerbg: hsl(0, 0%, 98%); //#FAFAFA
 
