--- a/scss/global/_colors.scss
+++ b/scss/global/_colors.scss
@@ -8,6 +8,7 @@ $black: hsl(0, 0%, 0%); //#000000
 // THEME COLORS
 $primary: hsl(211, 97%, 60%); //#3898FC
 $primary-dark: hsl(207, 100%, 28%); //#004D8D
+$primarydeep:hsl(228, 100%, 65%);  //#4C6FFF;
 
 $danger: hsl(353, 92%, 39%); //#BD081C
 $success: hsl(119, 39%, 62%); //#78C377
