--- a/scss/components/input/_input.scss
+++ b/scss/components/input/_input.scss
@@ -26,6 +26,25 @@
     }
     .textareafield {
        
+    } 
+
+    .error {
+      display: none;
+
+      .error-message {
+        color: $danger;
+        @include font($primaryFont, 13, medium, normal, 17);
+      }
+    }
+
+    &.errorfield {
+      .inputfield {
+        border-color: $danger;
+      }
+      
+      .error {
+        display: block;
+      }
     }
   }
 
