--- a/scss/global/_colors.scss
+++ b/scss/global/_colors.scss
@@ -57,4 +57,15 @@ $videoshadow: inset 0 -0.0625rem 0 $gray-200;
 
 // CHECKBOX COLOR
 $checkboxbg:hsl(228, 100%, 65%); //#4C6FFF
-$checkboxborder:hsl(251, 45%, 79%) //#BCB3E2
+$checkboxborder:hsl(251, 45%, 79%); //#BCB3E2
+
+$text-primary: hsl(0, 0%, 17%); //#2B2B2B
+$text-secondary: hsl(223, 4%, 37%); //#5C5E63
+$text-tertiary: hsl(260, 2%, 50%); //#7F7D83
+$text-quaternary: hsl(0, 0%, 64%); //#A3A3A3
+$nutral-gray: hsl(0, 0%, 96%); //#F5F5F5
+$bg-fill: hsl(210, 10%, 96%); //#F4F5F6
+$border-default: hsl(220, 10%, 94%); //#EEEFF1
+$blue-600: hsl(221, 83%, 53%); //#2563EB
+
+$btnshadow: 0rem .0938rem .25rem -0.0625rem rgba(11, 14, 36, 0.08);
