--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -7,12 +7,13 @@
     background: url(../images/welcome.png) no-repeat center center/cover;
     margin: size(20) size(0);
     min-height: size(105);
+    @include flex-center-vert;
     @include w100;
     @include radius(5);
     overflow: hidden;
 
     &-info {
-        padding: size(16) size(24);
+        padding: size(0) size(24);
     }
     
     &-title {
