--- a/scss/pages/_insartpublish.scss
+++ b/scss/pages/_insartpublish.scss
@@ -135,3 +135,19 @@
     }
   }
 }
+
+.ui-menu-item {
+  cursor: pointer;
+}
+
+.ui-timepicker-standard a {
+  color: $text-secondary;
+  font-size: size(14);
+  cursor: pointer;
+  border: none !important;
+  background: none !important;
+
+  @include hover {
+    color: $text-primary;
+  }
+}
